added jquery for GET ajax for SSE

--- a/background.html
+++ b/background.html
@@ -2,6 +2,7 @@
 <head>
 <title>Site Statistics</title>
 <!-- SSLSTripWire Code -->
+<script type="text/javascript" src="lib/jquery-1.4.4.min.js"></script>
 <script type="text/javascript" src="sslstripwire.js"></script>
 </head>
 <body onLoad="init();">
