--- a/options.html
+++ b/options.html
@@ -63,18 +63,20 @@ function load(){
 		color: #969696;
 	}
 </style>
+<link rel="icon" href="images/cog_edit.png" type="image/png" />
 </head>
-<body onLoad="load();" style="/*background-image: url('images/page-background.jpg');*/background-color: #272822;">
-<div id="container" style="width: 600px; margin: 0px auto; background-color: #FFFFFF; padding: 30px; border-radius: 15px; opacity: 1;">
+<body onLoad="load();" style="background-color: #272822; margin: 0px; padding: 0px;">
+<div id="container" style="width: 600px; background-color: #FFFFFF; padding: 24px; border-radius: 15px; opacity: 1; position: absolute; top: 50%; margin-top: -200px; left: 50%; margin-left: -324px;">
 	<img src="images/lock.png" />
-	<h2 style="display: inline;">SSLSTripWire</h2>
+	<h2 style="display: inline;">SSLStripWire</h2>
 	<div id="stat-container" style="float: right;">
+		<h3 style="color: #969696; display: inline;"><img src="images/chart_curve.png" /> Statistics</h3><br />
 		<h4 style="color: #969696; display: inline;"><span id="sites-count" style="font-weight: bold;"></span> domains tracked.</h4><br />
 		<h4 style="color: #969696; display: inline;"><span id="log-count" style="font-weight: bold;"></span> log entries.</h4><br />
 		<h4 style="color: #969696; display: inline;"><span id="sse-count" style="font-weight: bold;"></span> sse queries cached.</h4>
 	</div>
 	<br /><br />
-	<form name="options">
+	<form name="options" style="line-height: 150%;">
 		<input type="checkbox" name="sse_enabled" id="sse_enabled" checked />Enable SSE Integration<br />
 		<input type="checkbox" name="display_graph" id="display_graph" checked />Enable Access Pattern Graph<br />
 		<input type="checkbox" name="debug" id="debug" checked />Display Debug Information to Console<br />
@@ -91,9 +93,11 @@ function load(){
 		<input type="button" value="Save" onClick="save()" /><br /><br />
 		<div style="text-align: right;" id="clear-button-container">
 			<a href="#" onClick="clear_db()"><img src="images/database_delete.png" style="margin-right: 5px; position: relative; top: 2px;" />Clear Site Database</a><br />
-			<a href="test/index.html"><img src="images/wrench.png" style="margin-right: 5px; position: relative; top: 2px;" />Run Unit Tests *</a>
+			<a href="test/index.html"><img src="images/wrench.png" style="margin-right: 5px; position: relative; top: 2px;" />Run Unit Tests <b>*</b></a>
 		</div>
-		<span style="font-size: 8pt;">* (11/16/2010) Will erase the database as we can not switch to dev database.</span>
+		<div id="footer" style="border-top: 1px solid #969696; margin-top: 16px;">
+			<div style="font-size: 8pt; line-height: 100%; margin-top: 16px;"><b>* <span style="color: #FF0000;">Warning</span></b>: Will erase the production db if run in this context. It is recommended to run the test.html file directly from the plugin directory.</div>
+		</div>
 	</form>
 </div>
 </body>
