Added content working content scripts, added logic to emit errors

--- a/options.html
+++ b/options.html
@@ -66,7 +66,7 @@ function load(){
 <link rel="icon" href="images/cog_edit.png" type="image/png" />
 </head>
 <body onLoad="load();" style="background-color: #272822; margin: 0px; padding: 0px;">
-<div id="container" style="width: 600px; background-color: #FFFFFF; padding: 24px; border-radius: 15px; opacity: 1; position: absolute; top: 50%; margin-top: -200px; left: 50%; margin-left: -324px;">
+<div id="container" style="width: 600px; padding: 24px; border-radius: 15px; opacity: 1; position: absolute; top: 50%; margin-top: -200px; left: 50%; margin-left: -324px; -webkit-box-shadow: 0px 0px 20px #000; background: -webkit-gradient(linear, left top, left bottom, from(#FCF1BD), to(#FAE784));">
 	<img src="images/lock.png" />
 	<h2 style="display: inline;">SSLStripWire</h2>
 	<div id="stat-container" style="float: right;">
